<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.memostenes.agenda.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"/>

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:layout_below="@+id/tiNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/superior"
        />
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/dpFecha"
        android:layout_below="@+id/tvFecha"
        android:layout_centerHorizontal="true"
        android:timePickerMode="spinner"
        android:calendarViewShown="false"

        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dpFecha"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel"
            android:layout_below="@+id/dpFecha"
            android:layout_marginTop="@dimen/superior"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilTel"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"

            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilCorreo"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descr"

            />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilDescr"
        android:text="@string/text_siguiente"
        />
</RelativeLayout>
