<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.memostenes.agenda.Confirma">

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_titulo2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/superior"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvNombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_titulo2"
        android:layout_below="@+id/tvTitulo2"
        android:layout_marginTop="@dimen/superior"

        />
    <LinearLayout
        android:id="@+id/lyUno"
        android:layout_below="@+id/tvNombre2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvFecha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/superior"

            />
        <TextView
            android:id="@+id/tvDFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"

            android:layout_marginTop="@dimen/superior"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyDos"
        android:layout_below="@+id/lyUno"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/superior"

            />
        <TextView
            android:id="@+id/tvDTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tel"

            android:layout_marginTop="@dimen/superior"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyTres"
        android:layout_below="@+id/lyDos"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/superior"

        />
     <TextView
        android:id="@+id/tvDMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="algoooo"

        android:layout_marginTop="@dimen/superior"

        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyCuatro"
        android:layout_below="@+id/lyTres"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_descr"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/superior"

            />
        <TextView
            android:id="@+id/tvDDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"

            android:layout_marginTop="@dimen/superior"

            />
    </LinearLayout>
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyCuatro"
        android:text="@string/text_editar"
        android:layout_marginTop="@dimen/superior"
        />
</RelativeLayout>
